--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@parse/node-apn": "^6.0.1",
     "animejs": "^3.2.1",
     "axios": "^1.6.2",
     "gsap": "^3.12.2",
