--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "nuxt build",
+    "build": "NODE_ENV=production && nuxt build --dotenv .env.production",
+    "stage": "NODE_ENV=stage && nuxt build --dotenv .env.stage",
     "dev:host": "npm run dev -- --host",
-    "dev": "nuxt dev --hostname",
+    "dev": "nuxt dev --hostname --dotenv .env.development",
     "start": "nuxt start",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
