--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "markdown-it": "^13.0.2",
     "nuxt": "^3.8.0",
     "nuxt-delay-hydration": "^1.3.3",
+    "nuxt-simple-robots": "^3.1.9",
     "nuxt-simple-sitemap": "^4.1.0",
     "sass": "^1.69.4",
     "typescript": "^5.2.2",
